refactor Application.getAdmins, Application.show